# TabularViewer

./: .env.ini  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
core/templates/core/: base.html
files/: models.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_alter_uploadedfile_name.py
files/templates/files/: error.html  file_detail.html  file_list.html  upload_file.html  upload_success.html
